# CellphoneDB

./: .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  cellphonedb.ipynb  environment.yml  previous_releases.md  pyproject.toml  requirements.txt  setup.py  win-requirements.txt
.github/workflows/: python-app.yml
Docs/: README.md  RESULTS-DOCUMENTATION.md  cellphonedb.data.prep.rst  cellphonedb.utils.rst  index.rst  requirements.txt
Docs/api/: cellphonedb.src.core.methods.rst  conf.py  environment.yml  index.rst  installing_python.md
NatureProtocols2024_case_studies/CaseExample1_differentiation/: analysis_method3_CellSign_microenvironments.ipynb  visualisation_ktplots.ipynb
NatureProtocols2024_case_studies/CaseExample1_differentiation/results/: degs_analysis_CellSign_active_interactions_06_25_2024_103453.txt  degs_analysis_CellSign_active_interactions_deconvoluted_06_25_2024_103453.txt  degs_analysis_deconvoluted_06_25_2024_103453.txt  degs_analysis_deconvoluted_percents_06_25_2024_103453.txt  degs_analysis_means_06_25_2024_103453.txt  degs_analysis_relevant_interactions_06_25_2024_103453.txt  degs_analysis_significant_means_06_25_2024_103453.txt
NatureProtocols2024_case_studies/CaseExample3_specificityScoring/: analysis_method2_scoring.ipynb
NatureProtocols2024_case_studies/v5.0.0/: complex_input.csv  gene_input.csv
cellphonedb/: __init__.py  api.py  cellphonedb.ipynb  cellphonedb_cli.py  controller.py
cellphonedb/notebooks/: 0_prepare_your_data_from_Seurat.ipynb  cellphonedb.ipynb
cellphonedb/src/app/: app_logger.py
cellphonedb/src/core/: core_logger.py  metadata.json
cellphonedb/src/core/exceptions/: DatabaseCreationException.py  MissingRequiredArgumentsException.py  NoInteractionsFound.py  ParseCountsException.py  ProcessMetaException.py
cellphonedb/src/core/generators/: complex_generator.py  gene_generator.py  protein_generator.py
cellphonedb/src/core/methods/: cpdb_analysis_complex_method.py  cpdb_analysis_helper.py  cpdb_analysis_method.py  cpdb_degs_analysis_complex_method.py  cpdb_degs_analysis_helper.py  cpdb_degs_analysis_method.py  cpdb_statistical_analysis_complex_method.py  cpdb_statistical_analysis_helper.py  cpdb_statistical_analysis_method.py  method_launcher.py
cellphonedb/src/core/preprocessors/: counts_preprocessors.py  method_preprocessors.py
cellphonedb/src/core/utils/: cellsign.py  filters.py  subsampler.py
cellphonedb/src/exceptions/: MissingRequiredColumns.py  NoReleasesException.py
cellphonedb/src/local_launchers/: local_method_launcher.py  local_query_launcher.py
cellphonedb/src/tests/: method_tests.py
cellphonedb/utils/: database_version_manager.py  db_releases_utils.py  db_utils.py  file_utils.py  generate_data_helper.py  generate_input_files.py  generate_input_files_helper.py  scoring_utils.py  search_utils.py  utils.py
cellphonedb/utils/generate_data/getters/: get_imex.py  (+1 more)
docs/: README.md  RESULTS-DOCUMENTATION.md  conf.py  installing_python.md
docs/_static/css/: custom.css
example_data/: test.h5ad  test_complex.csv  test_degs.txt  test_interaction.csv
example_data/NatureProtocols2024_case_examples/CaseExample1_differentiation/: analysis_method3_CellSign_microenvironments.ipynb
example_data/NatureProtocols2024_case_examples/v5.0.0/: interaction_input.csv  protein_input.csv
example_data/NatureProtocols2024_case_studies/: T0_DownloadDB.ipynb
example_data/NatureProtocols2024_case_studies/CaseExample2_spatialNiches/: analysis_method3_microenvironments.ipynb
example_data/endometrium_atlas_example/: endometrium_example_meta.tsv
example_data/test_data/: test_active_tfs.txt  test_degs.txt  test_microenviroments.txt
in/endometrium_atlas_example/: endometrium_example_DEGs.tsv  endometrium_example_microenviroments.tsv
in/example_data/: test_microenviroments.txt
notebooks/: 0_prepare_your_data_from_Seurat.ipynb  0_prepare_your_data_from_anndata.ipynb  README.md  T00_BuildDBfromFiles.ipynb  T00_DownloadDB.ipynb  T01_Method1.ipynb  T01_Method2.ipynb  T01_Method2_with_subsampling.ipynb  T01_Method3.ipynb  T0_BuildDBfromFiles.ipynb  T0_DownloadDB.ipynb  T1_Method1.ipynb  T1_Method2.ipynb  T1_Method3.ipynb  cellphonedb.ipynb  create_cellphonedb.ipynb  example_scoring_protocol.ipynb
notebooks/DEGs_calculation/: 0_prepare_your_data_from_anndata.ipynb
tests/: test_method.py
(+14 files in other folders)
